Fix tab selector horizontal alignment

--- a/src/sections/classes-events.module.scss
+++ b/src/sections/classes-events.module.scss
@@ -32,7 +32,7 @@
   display: flex;
   height: 3.5rem;
   align-items: center;
-  margin: 0 1rem;
+  margin-right: 1rem;
   background-color: #e0e0e0;
   border-radius: 15px;
   box-shadow: $shadow-md;
